--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 									solutions.</p>
 							</div>
 							<div class="tm_button">
-								<a style="background-color: #0077B5;" href="https://www.linkedin.com/feed/"
+								<a style="background-color: #0077B5;" href="https://www.linkedin.com/in/michaelcui1997/"
 									target="_blank" download>Linkedin</a>
 							</div>
 						</div>
