updated styling and layout

--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
 					<ul class="anchor_nav">
 						<li class="current"><a href="#home">Home</a></li>
 						<li><a href="#about">About</a></li>
-						<li><a href="#timeline">Experience</a></li>
 						<li><a href="#portfolio">Portfolio</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
@@ -73,7 +72,6 @@
 						<ul class="anchor_nav">
 							<li class="current"><a href="#home">Home</a></li>
 							<li><a href="#about">About</a></li>
-							<li><a href="#timeline">Experience</a></li>
 							<li><a href="#portfolio">Portfolio</a></li>
 							<li><a href="#contact">Contact</a></li>
 						</ul>
@@ -103,7 +101,8 @@
 								<h3 class="stroke">Michael</h3>
 								<h3>Cui</h3>
 								<div class="job">
-									<span>SWE</span><span>Cybersecurity</span><span>AI-Driven Security Solutions</span>
+									<span>Cybersecurity Engineer</span><span>Cloud Solutions</span><span>AI/ML for
+										Threat Detection</span>
 								</div>
 							</div>
 						</div>
@@ -124,44 +123,107 @@
 								<h3>Cybersecurity Professional based in Austin, TX</h3>
 							</div>
 							<div class="text">
-								<p>Software Engineer with 4+ years of experience specializing in Cybersecurity and AI.
-									I'm pursuing my M.S. in Cybersecurity at Johns Hopkins University and leverage my
-									development expertise alongside machine learning to build intelligent security
-									solutions.</p>
+								<p>Cybersecurity Engineer bridging software development and security operations, with
+									proven experience building secure systems at General Motors and hands-on expertise
+									in threat detection, cloud security, and AI-powered defense mechanisms.</p>
+								<br>
+								<p>I've deployed Azure-based SIEM environments with custom detection rules, conducted
+									network vulnerability assessments with comprehensive remediation strategies, and
+									designed HIPAA-compliant access control architectures following NIST frameworks. My
+									research applies machine learning to cybersecurity—developing vision transformers
+									for malware classification (95.8% accuracy) and adversarial systems for secure data
+									embedding.</p>
+								<br>
+								<p><strong>Technical Expertise:</strong> Python, JavaScript/TypeScript, React, Node.js |
+									Azure, AWS, Terraform | SIEM (Wazuh), GitHub Advanced Security, OpenVAS | OAuth 2.0,
+									Zero Trust Architecture | Machine Learning, Computer Vision</p>
 							</div>
-							<div class="tm_button">
-								<a style="background-color: #0077B5;" href="https://www.linkedin.com/in/michaelcui1997/"
-									target="_blank" download>Linkedin</a>
+
+							<div style="display: flex; gap: 12px; flex-wrap: wrap;">
+								<div class="tm_button" style="flex: 1; min-width: 140px; max-width: 200px;">
+									<a style="background-color: #0077B5; width: 100%; display: block; text-align: center;"
+										href="https://www.linkedin.com/in/michaelcui1997/" target="_blank">LinkedIn</a>
+								</div>
+
+								<div class="tm_button" style="flex: 1; min-width: 140px; max-width: 200px;">
+									<a style="width: 100%; display: block; text-align: center;"
+										href="https://github.com/mcui1997" target="_blank">Github</a>
+								</div>
 							</div>
+
+							<style>
+
+							</style>
+
+							<style>
+
+							</style>
+
 						</div>
 						<div class="right wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.2s">
-							<div class="list">
-								<div class="accordion_wrap ready">
-									<div class="accordion active">
-										<div class="accordion_header">
-											<h3>Personal Details</h3>
-										</div>
-										<div class="accordion_content">
-											<div class="info_list">
-												<ul>
-													<li>
-														<span>Email:</span>
-														<span>cuimichael500@gmail.com</span>
-													</li>
-													<li>
-														<span>Location:</span>
-														<span>Austin, TX</span>
-													</li>
-													<li>
-														<span>Certifications</span>
-														<span>CompTIA Security+</span>
-													</li>
-													<li>
-														<span>Focus:</span>
-														<span>Cybersecurity & AI/ML</span>
-													</li>
-												</ul>
+
+							<div class="tm_section clearfix" id="timeline">
+								<div class="tm_experience" style="padding: 0; margin-top: 12px;">
+									<div class="container" style="padding: 0;">
+										<div class="experience_inner">
+
+											<div class="box">
+												<div class="title wow fadeInLeft" data-wow-duration="1s">
+													<h3>Timeline</h3>
+												</div>
+												<div class="list_wrap">
+													<ul>
+														<li class="wow fadeInLeft" data-wow-duration="1s">
+															<div class="list_inner">
+																<div class="occ">
+																	<h3>General Motors</h3>
+																	<span>Software Engineer</span>
+																</div>
+																<div class="time">
+																	<span>2021-present</span>
+																</div>
+															</div>
+														</li>
+														<li class="wow fadeInLeft" data-wow-duration="1s">
+															<div class="list_inner">
+																<div class="occ">
+																	<h3>John Hopkins University</h3>
+																	<span>M.S. in Cybersecurity | AI
+																		Specialization</span>
+																</div>
+																<div class="time">
+																	<span>2023-2026</span>
+																</div>
+															</div>
+														</li>
+
+														<li class="wow fadeInLeft" data-wow-duration="1s">
+															<div class="list_inner">
+																<div class="occ">
+																	<h3>Charity Studio</h3>
+																	<span>Software Developer</span>
+																</div>
+																<div class="time">
+																	<span>2020-2021</span>
+																</div>
+															</div>
+														</li>
+														<li class="wow fadeInLeft" data-wow-duration="1s">
+															<div class="list_inner">
+																<div class="occ">
+																	<h3>University of Texas at Austin</h3>
+																	<span>B.S. in Biomedical Engineering</span>
+																</div>
+																<div class="time">
+																	<span>2016-2021</span>
+																</div>
+															</div>
+														</li>
+													</ul>
+												</div>
 											</div>
+
+
 										</div>
 									</div>
 								</div>
@@ -173,91 +235,10 @@
 		</div>
 		<!-- /ABOUT -->
 
-		<!-- EXPERIENCE -->
-		<div class="tm_section clearfix" id="timeline">
-			<div class="tm_experience">
-				<div class="container">
-					<div class="tm_title wow fadeInLeft" data-wow-duration="1s">
-						<span>Timeline</span>
-						<h3>Experience and Education</h3>
-					</div>
-					<div class="experience_inner">
-						<div class="left">
-							<div class="box">
-								<div class="title wow fadeInLeft" data-wow-duration="1s">
-									<h3>Experience</h3>
-								</div>
-								<div class="list_wrap">
-									<ul>
-										<li class="wow fadeInLeft" data-wow-duration="1s">
-											<div class="list_inner">
-												<div class="occ">
-													<h3>General Motors</h3>
-													<span>Software Engineer</span>
-												</div>
-												<div class="time">
-													<span>2021-present</span>
-												</div>
-											</div>
-										</li>
-										<li class="wow fadeInLeft" data-wow-duration="1s">
-											<div class="list_inner">
-												<div class="occ">
-													<h3>Charity Studio</h3>
-													<span>Software Developer</span>
-												</div>
-												<div class="time">
-													<span>2020-2021</span>
-												</div>
-											</div>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-						<div class="right">
-							<div class="box">
-								<div class="title wow fadeInLeft" data-wow-duration="1s">
-									<h3>Education</h3>
-								</div>
-								<div class="list_wrap">
-									<ul>
-										<li class="wow fadeInLeft" data-wow-duration="1s">
-											<div class="list_inner">
-												<div class="occ">
-													<h3>Johns Hopkins University</h3>
-													<span>M.S. in Cybersecurity</span>
-												</div>
-												<div class="time">
-													<span>2023-present</span>
-												</div>
-											</div>
-										</li>
-										<li class="wow fadeInLeft" data-wow-duration="1s">
-											<div class="list_inner">
-												<div class="occ">
-													<h3>University of Texas at Austin</h3>
-													<span>B.S. in Bioengineering</span>
-												</div>
-												<div class="time">
-													<span>2016-2021</span>
-												</div>
-											</div>
-										</li>
-
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- /EXPERIENCE -->
 
 		<!-- PORTFOLIO -->
 		<div class="tm_section clearfix" id="portfolio">
-			<div class="tm_portfolio swiper-section">
+			<div class="tm_portfolio swiper-section" style="background-color: white; padding-bottom: 60px;">
 				<div class="container">
 					<div class="tm_title wow fadeInLeft" data-wow-duration="1s">
 						<span>Portfolio</span>
@@ -662,136 +643,90 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="container" style="padding-bottom: 143px;">
+				<div class="tm_title wow fadeInLeft" data-wow-duration="1s" style="margin-bottom: 20px;">
+
+
+
+				</div>
+				<h3 style="margin-bottom: 24px;">Additional Work</h3>
+				<div class="contact_inner">
+					<div class="accordion_wrap ready">
+						<div class="accordion active wow fadeInLeft" data-wow-duration="1s">
+							<div class="accordion_header">
+								<h3>Project 1</h3>
+							</div>
+
+						</div>
+						<div class="accordion active wow fadeInLeft" data-wow-duration="1s">
+							<div class="accordion_header">
+								<h3>Project 2</h3>
+							</div>
+
+						</div>
+						<div class="accordion active wow fadeInLeft" data-wow-duration="1s">
+							<div class="accordion_header">
+								<h3>Project 3</h3>
+							</div>
+
+						</div>
+						<div class="accordion active wow fadeInLeft" data-wow-duration="1s">
+							<div class="accordion_header">
+								<h3>Project 4</h3>
+							</div>
+
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 		<!-- /PORTFOLIO -->
 
-		<!-- CONTACT -->
-		<div class="tm_section clearfix" id="contact">
-			<div class="tm_contact">
+		<!-- COPYRIGHT -->
+		<div class="tm_section clearfix">
+			<div class="tm_copyright">
 				<div class="container">
-					<div class="tm_title wow fadeInLeft" data-wow-duration="1s">
-						<span>Contact</span>
-						<h3>Get in Touch</h3>
-					</div>
-					<div class="contact_inner">
-						<div class="accordion wow fadeInLeft" data-wow-duration="1s">
-							<div class="accordion_content">
-								<div class="form_wrapper">
-									<form id="contactForm">
-										<div class="error_box" id="empty-form">
-											<p>Please Fill Required Fields</p>
-										</div>
-										<div class="error_box" id="subject-alert">
-											<p>Please Select Subject</p>
-										</div>
-										<div class="error_box" id="security-alert">
-											<p>Security code does not match !</p>
-										</div>
-										<div class="error_box" id="email-invalid">
-											<p>Please enter a valid email address. Exp. example@gmail.com</p>
-										</div>
-										<div class="error_box" id="phone-invalid">
-											<p>Please enter a valid phone number.Exp. +998991774433</p>
-										</div>
-										<div class="error_box" id="error_mail">
-											<p></p>
-										</div>
-										<div class="success_box" id="success_mail">
-											<p>Your message has been sent. We will contact you as soon as possible.
-											</p>
-										</div>
-										<ul>
-											<li>
-												<input type="text" placeholder="Name" name="contact_name"
-													class="cf-form-control" />
-												<span></span>
-											</li>
-											<li>
-												<input type="text" placeholder="Email" name="contact_email"
-													class="cf-form-control" />
-												<span></span>
-											</li>
-											<li>
-												<input type="text" placeholder="Phone" name="contact_phone"
-													class="cf-form-control" />
-												<span></span>
-											</li>
-											<li>
-												<select name="contact_subject" class="cf-form-control">
-													<option value="Choose Services">Choose Service</option>
-													<option value="Web Development">Web Development</option>
-													<option value="Mobile Application">Mobile Application</option>
-													<option value="UI/UX Design">UI/UX Design</option>
-												</select>
-											</li>
-											<li id="text-area-w">
-												<textarea placeholder="Message" name="contact_message"
-													class="cf-form-control"></textarea>
-											</li>
-											<li id="enter_code">
-												<span id="txtCaptchaSpan"></span>
-												<input type="text" class="cf-form-control" name="contact_question"
-													id="txtInput" autocomplete="off" placeholder="Please Enter Code *">
-												<input type="hidden" id="txtCaptcha">
-											</li>
-										</ul>
-										<div class="tm_button">
-											<button id="send_message" href="#">Send Message</button>
-										</div>
-									</form>
-								</div>
-							</div>
+					<div class="inner">
+						<div class="logo wow fadeInLeft" data-wow-duration="1s">
 						</div>
-
-					</div>
-				</div>
-			</div>
-			<!-- /CONTACT -->
-
-			<!-- COPYRIGHT -->
-			<div class="tm_section clearfix">
-				<div class="tm_copyright">
-					<div class="container">
-						<div class="inner">
-							<div class="logo wow fadeInLeft" data-wow-duration="1s">
-							</div>
-							<div class="text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.2s">
-								<p>Copyright &copy; 2025 by <span class="line_effect">Michael Cui</span></p>
-							</div>
+						<div class="text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.2s">
+							<p>Copyright &copy; 2025 by <span class="line_effect">Michael Cui</span></p>
 						</div>
 					</div>
 				</div>
 			</div>
-			<!-- /COPYRIGHT -->
-
-			<!-- AUDIO FOR TRIGGER CLICK -->
-			<div class="audiowrap">
-				<audio id="audio1">
-					<source src="audio/1.mp3">
-				</audio>
-				<audio id="audio2">
-					<source src="audio/2.mp3">
-				</audio>
-			</div>
-			<!-- /AUDIO FOR TRIGGER CLICK -->
-
-			<!-- TOTOP -->
-			<div class="progressbar">
-				<a href="#"><span class="text">To Top</span></a>
-				<span class="line"></span>
-			</div>
-			<!-- /TOTOP -->
-
 		</div>
-		<!-- / WRAPPER ALL -->
+		<!-- /COPYRIGHT -->
+
+		<!-- AUDIO FOR TRIGGER CLICK -->
+		<div class="audiowrap">
+			<audio id="audio1">
+				<source src="audio/1.mp3">
+			</audio>
+			<audio id="audio2">
+				<source src="audio/2.mp3">
+			</audio>
+		</div>
+		<!-- /AUDIO FOR TRIGGER CLICK -->
+
+		<!-- TOTOP -->
+		<div class="progressbar">
+			<a href="#"><span class="text">To Top</span></a>
+			<span class="line"></span>
+		</div>
+		<!-- /TOTOP -->
+
+	</div>
+	<!-- / WRAPPER ALL -->
 
 
-		<!-- SCRIPTS -->
-		<script src="js/jquery.js"></script>
-		<script src="js/plugins.js"></script>
-		<script src="js/contact.form.js"></script>
-		<script src="js/init.js"></script>
-		<!-- /SCRIPTS -->
+	<!-- SCRIPTS -->
+	<script src="js/jquery.js"></script>
+	<script src="js/plugins.js"></script>
+	<script src="js/contact.form.js"></script>
+	<script src="js/init.js"></script>
+	<!-- /SCRIPTS -->
 
 </body>
 
