--- a/index.html
+++ b/index.html
@@ -132,19 +132,18 @@
 									for malware classification (95.8% accuracy) and adversarial systems for secure data
 									embedding.</p>
 								<br>
-								<p><strong>Technical Expertise:</strong> Python, JavaScript/TypeScript, React, Node.js |
-									Azure, AWS, Terraform | SIEM (Wazuh), GitHub Advanced Security, OpenVAS | OAuth 2.0,
-									Zero Trust Architecture | Machine Learning, Computer Vision</p>
+								<p><strong>Certifications:</strong> CompTIA Security+, Azure-500 Cloud Certificate</p>
 							</div>
 
 							<div style="display: flex; gap: 12px; flex-wrap: wrap;">
 								<div class="tm_button" style="flex: 1; min-width: 140px; max-width: 200px;">
-									<a style="background-color: #0077B5; width: 100%; display: block; text-align: center;"
+									<a class="linkedin-btn"
+										style="background-color: #0077B5 !important; width: 100%; display: block; text-align: center;"
 										href="https://www.linkedin.com/in/michaelcui1997/" target="_blank">LinkedIn</a>
 								</div>
 
 								<div class="tm_button" style="flex: 1; min-width: 140px; max-width: 200px;">
-									<a style="width: 100%; display: block; text-align: center;"
+									<a class="linkedin-btn" style="width: 100%; display: block; text-align: center;"
 										href="https://github.com/mcui1997" target="_blank">Github</a>
 								</div>
 							</div>
@@ -185,7 +184,7 @@
 														<li class="wow fadeInLeft" data-wow-duration="1s">
 															<div class="list_inner">
 																<div class="occ">
-																	<h3>John Hopkins University</h3>
+																	<h3>Johns Hopkins University</h3>
 																	<span>M.S. in Cybersecurity | AI
 																		Specialization</span>
 																</div>
@@ -249,7 +248,7 @@
 									<div class="list_inner">
 										<div class="image">
 											<img src="img/thumbs/1-1.jpg" alt="" />
-											<div class="main" data-img-url="img/portfolio/1.jpg"></div>
+											<div class="main" data-img-url="img/portfolio/nodes.jpeg"></div>
 										</div>
 										<div class="details">
 											<span>Machine Learning</span>
@@ -285,21 +284,6 @@
 															<li>
 																<span class="first">Accuracy</span>
 																<span>94% Detection Rate</span>
-															</li>
-															<li>
-																<span class="first">Share</span>
-																<ul class="share">
-																	<li><a href="#"><img class="svg"
-																				src="img/svg/social/facebook.svg"
-																				alt="" /></a></li>
-																	<li><a href="#"><img class="svg"
-																				src="img/svg/social/twitter.svg"
-																				alt="" /></a></li>
-																	<li><a href="#"><img class="svg"
-																				src="img/svg/social/instagram.svg"
-																				alt="" /></a>
-																	</li>
-																</ul>
 															</li>
 														</ul>
 													</div>
@@ -344,7 +328,7 @@
 									<div class="list_inner">
 										<div class="image">
 											<img src="img/thumbs/1-1.jpg" alt="" />
-											<div class="main" data-img-url="img/portfolio/2.jpg"></div>
+											<div class="main" data-img-url="img/portfolio/malware.jpeg"></div>
 										</div>
 										<div class="details">
 											<span>Advanced ML</span>
@@ -382,21 +366,6 @@
 																<span class="first">Specialization</span>
 																<span>Metamorphic Malware</span>
 															</li>
-															<li>
-																<span class="first">Share</span>
-																<ul class="share">
-																	<li><a href="#"><img class="svg"
-																				src="img/svg/social/facebook.svg"
-																				alt="" /></a></li>
-																	<li><a href="#"><img class="svg"
-																				src="img/svg/social/twitter.svg"
-																				alt="" /></a></li>
-																	<li><a href="#"><img class="svg"
-																				src="img/svg/social/instagram.svg"
-																				alt="" /></a>
-																	</li>
-																</ul>
-															</li>
 														</ul>
 													</div>
 												</div>
@@ -440,7 +409,7 @@
 									<div class="list_inner">
 										<div class="image">
 											<img src="img/thumbs/1-1.jpg" alt="" />
-											<div class="main" data-img-url="img/portfolio/3.jpg"></div>
+											<div class="main" data-img-url="img/portfolio/qr.jpeg"></div>
 										</div>
 										<div class="details">
 											<span>Network Security</span>
@@ -475,20 +444,83 @@
 																<span class="first">Status</span>
 																<span>In Development</span>
 															</li>
+														</ul>
+													</div>
+												</div>
+												<div class="additional_images">
+													<ul>
+														<li>
+															<div class="list_inner">
+																<div class="my_image">
+																	<img src="img/thumbs/4-2.jpg" alt="" />
+																	<div class="main"
+																		data-img-url="img/portfolio/5.jpg"></div>
+																</div>
+															</div>
+														</li>
+														<li>
+															<div class="list_inner">
+																<div class="my_image">
+																	<img src="img/thumbs/4-2.jpg" alt="" />
+																	<div class="main"
+																		data-img-url="img/portfolio/6.jpg"></div>
+																</div>
+															</div>
+														</li>
+														<li>
+															<div class="list_inner">
+																<div class="my_image">
+																	<img src="img/thumbs/4-2.jpg" alt="" />
+																	<div class="main"
+																		data-img-url="img/portfolio/7.jpg"></div>
+																</div>
+															</div>
+														</li>
+													</ul>
+												</div>
+											</div>
+										</div>
+										<!-- /Modalbox Info Start -->
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="list_inner">
+										<div class="image">
+											<img src="img/thumbs/1-1.jpg" alt="" />
+											<div class="main" data-img-url="img/portfolio/qr.jpeg"></div>
+										</div>
+										<div class="details">
+											<span>Network Security</span>
+											<h3>Intrusion Detection System</h3>
+										</div>
+										<a class="tm_full_link portfolio_popup" href="#"></a>
+										<!-- Modalbox Info Start -->
+										<div class="hidden_content_portfolio">
+											<div class="popup_details">
+												<div class="main_details">
+													<div class="textbox">
+														<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+															do eiusmod tempor incididunt ut labore et dolore magna
+															aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+															ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+														<p>Duis aute irure dolor in reprehenderit in voluptate velit
+															esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+															occaecat cupidatat non proident, sunt in culpa qui officia
+															deserunt mollit anim id est laborum.</p>
+													</div>
+													<div class="detailbox">
+														<ul>
 															<li>
-																<span class="first">Share</span>
-																<ul class="share">
-																	<li><a href="#"><img class="svg"
-																				src="img/svg/social/facebook.svg"
-																				alt="" /></a></li>
-																	<li><a href="#"><img class="svg"
-																				src="img/svg/social/twitter.svg"
-																				alt="" /></a></li>
-																	<li><a href="#"><img class="svg"
-																				src="img/svg/social/instagram.svg"
-																				alt="" /></a>
-																	</li>
-																</ul>
+																<span class="first">Technologies</span>
+																<span>Coming Soon</span>
+															</li>
+															<li>
+																<span class="first">Category</span>
+																<span><a href="#">Network Security</a></span>
+															</li>
+															<li>
+																<span class="first">Status</span>
+																<span>In Development</span>
 															</li>
 														</ul>
 													</div>
@@ -533,7 +565,7 @@
 									<div class="list_inner">
 										<div class="image">
 											<img src="img/thumbs/1-1.jpg" alt="" />
-											<div class="main" data-img-url="img/portfolio/4.jpg"></div>
+											<div class="main" data-img-url="img/portfolio/cloud.jpeg"></div>
 										</div>
 										<div class="details">
 											<span>Vulnerability Assessment</span>
@@ -567,21 +599,6 @@
 															<li>
 																<span class="first">Status</span>
 																<span>Planning Phase</span>
-															</li>
-															<li>
-																<span class="first">Share</span>
-																<ul class="share">
-																	<li><a href="#"><img class="svg"
-																				src="img/svg/social/facebook.svg"
-																				alt="" /></a></li>
-																	<li><a href="#"><img class="svg"
-																				src="img/svg/social/twitter.svg"
-																				alt="" /></a></li>
-																	<li><a href="#"><img class="svg"
-																				src="img/svg/social/instagram.svg"
-																				alt="" /></a>
-																	</li>
-																</ul>
 															</li>
 														</ul>
 													</div>
@@ -648,30 +665,83 @@
 
 
 				</div>
-				<h3 style="margin-bottom: 24px;">Additional Work</h3>
+				<h3 style="margin-bottom: 24px;">Papers</h3>
 				<div class="contact_inner">
 					<div class="accordion_wrap ready">
-						<div class="accordion active wow fadeInLeft" data-wow-duration="1s">
+						<div class="accordion wow fadeInLeft" data-wow-duration="1s">
 							<div class="accordion_header">
-								<h3>Project 1</h3>
+								<h3>Vision Transformer - published</h3>
+							</div>
+							<div class="accordion_content">
+								<div style="display: flex; gap: 15px; margin-bottom: 15px;">
+									<a href="https://drive.google.com/file/d/18PNRFCJbhmeCsn_LwfRVt496Z7HSIWyk/view?usp=sharing"
+										target="_blank" class="project-link paper-link"
+										style="color: white; background-color: #e74c3c; padding: 8px 16px; text-decoration: none; border-radius: 4px; transition: all 0.3s ease;">
+										PAPER
+									</a>
+
+									<a href="https://github.com/mcui1997/vision-transformer" target="_blank"
+										class="project-link github-link"
+										style="color: white; background-color: #2c3e50; padding: 8px 16px; text-decoration: none; border-radius: 4px; transition: all 0.3s ease;">
+										GITHUB
+									</a>
+								</div>
+
+								<p>Explored applying Vision Transformers to network security by converting packet
+									payloads into visual representations for attack classification. Achieved 93.30%
+									accuracy across 9 attack types using a novel 5-channel encoding method on the
+									CIC-IoT23 dataset. This research demonstrates that treating network traffic as
+									images enables sophisticated computer vision techniques to effectively detect
+									cybersecurity threats.</p>
+							</div>
+
+							<style>
+								.project-link:hover {
+									transform: translateY(-2px);
+									box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+									opacity: 0.9;
+								}
+							</style>
+
+						</div>
+						<div class="accordion wow fadeInLeft" data-wow-duration="1s">
+							<div class="accordion_header">
+								<h3>HIPPA NIST Gap Analysis</h3>
+							</div>
+							<div class="accordion_content">
+								<div style="display: flex; gap: 15px; margin-bottom: 15px;">
+									<a class="project-link github-link"
+										href="https://github.com/mcui1997/hippa-nist-gap-analysis" target="_blank"
+										style="color: white; background-color: #2c3e50; padding: 8px 16px; text-decoration: none; border-radius: 4px; transition: all 0.3s ease;">GITHUB</a>
+								</div>
+								<p>Enterprise cybersecurity analysis for implementing Attribute-Based Access Control
+									(ABAC) in a hospital transplant center environment. Conducted comprehensive gap
+									analysis using NIST Cybersecurity Framework 2.0 and NIST IR 8170 to transition from
+									RBAC to ABAC, enhancing security for electronic health records while maintaining
+									HIPAA compliance. Developed phased implementation strategy with risk management
+									framework balancing patient safety, security, and privacy.</p>
+
 							</div>
 
 						</div>
-						<div class="accordion active wow fadeInLeft" data-wow-duration="1s">
+						<div class="accordion wow fadeInLeft" data-wow-duration="1s">
 							<div class="accordion_header">
-								<h3>Project 2</h3>
+								<h3>Virtual Network Vulnerability Analysis</h3>
 							</div>
+							<div class="accordion_content">
+								<div style="display: flex; margin-bottom: 15px;">
+									<a class="project-link github-link"
+										href="https://github.com/mcui1997/network-vulnerability-analysis"
+										target="_blank"
+										style="color: white; background-color: #2c3e50; padding: 8px 16px; text-decoration: none; border-radius: 4px; transition: all 0.3s ease; margin-bottom: 15px !important;">GITHUB</a>
 
-						</div>
-						<div class="accordion active wow fadeInLeft" data-wow-duration="1s">
-							<div class="accordion_header">
-								<h3>Project 3</h3>
-							</div>
+								</div>
+								<p>Comprehensive vulnerability assessment of a virtualized network environment using
+									OpenVAS and Kali Linux. Conducted security analysis across DMZ, internal networks,
+									and DNS servers, identifying critical vulnerabilities including authentication
+									weaknesses, cryptographic failures, and default credentials. Developed detailed
+									mitigation strategies aligned with NIST, CIS, and ISO security frameworks.</p>
 
-						</div>
-						<div class="accordion active wow fadeInLeft" data-wow-duration="1s">
-							<div class="accordion_header">
-								<h3>Project 4</h3>
 							</div>
 
 						</div>
