--- a/index.html
+++ b/index.html
@@ -503,8 +503,7 @@
 											<div class="main" data-img-url="img/portfolio/malware.jpeg"></div>
 										</div>
 										<div class="details" style="pointer-events: none !important">
-											<span style="pointer-events: none !important">Python | TensorFlow |
-												Scikit-learn</span>
+											<span style="pointer-events: none !important">Python | TensorFlow</span>
 											<h3>IoT Botnet Detection System</h3>
 										</div>
 										<a class="tm_full_link portfolio_popup" href="#"></a>
@@ -587,7 +586,7 @@
 					<div class="accordion_wrap ready">
 						<div class="accordion wow fadeInLeft" data-wow-duration="1s">
 							<div class="accordion_header">
-								<h3>Vision Transformer with Few Shot Learning- Published</h3>
+								<h3>Vision Transformer with Few Shot Learning- Publication</h3>
 							</div>
 							<div class="accordion_content">
 								<div style="display: flex; gap: 15px; margin-bottom: 15px;">
