updated readme and projects

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 															<li>
 																<div style="margin-bottom: 15px;">
 																	<a class="project-link github-link"
-																		href="https://github.com/mcui1997/network-vulnerability-analysis"
+																		href="https://github.com/mcui1997/secure-azure-app"
 																		target="_blank"
 																		style="color: white; background-color: #2c3e50; padding: 8px 16px; text-decoration: none; border-radius: 4px; transition: all 0.3s ease; margin-bottom: 15px !important;">GITHUB</a>
 
@@ -315,8 +315,8 @@
 											<div class="main" data-img-url="img/portfolio/nodes.jpeg"></div>
 										</div>
 										<div class="details">
-											<span>Azure | Python | Automation</span>
-											<h3>Azure Automation Framework</h3>
+											<span>AWS | Python | Security</span>
+											<h3>AWS Cloud Security Scanner</h3>
 										</div>
 										<a class="tm_full_link portfolio_popup" href="#"></a>
 										<!-- Modalbox Info Start -->
@@ -324,40 +324,35 @@
 											<div class="popup_details">
 												<div class="main_details">
 													<div class="textbox">
-														<p>Automated security assessment framework leveraging Azure SDK
-															for Python to continuously scan cloud resources for
-															misconfigurations and compliance violations. Performs
-															comprehensive security posture evaluation including NSG rule
-															analysis, storage account exposure detection, unencrypted
-															resource identification, and orphaned resource cleanup with
-															detailed remediation recommendations.</p>
-														<p>Integrates with Azure Security Center and Microsoft Defender
-															for Cloud APIs to aggregate findings and automate
-															remediation workflows. Features customizable policy rules,
-															scheduled execution via Azure Functions, detailed compliance
-															reporting against frameworks like CIS and NIST, and
-															Slack/Teams notifications for critical security findings
-															requiring immediate attention.</p>
+														<p>Automated Python scanner for detecting AWS security
+															misconfigurations across S3, EC2, IAM, VPC, and RDS.
+															Identifies exposed resources, overprivileged roles, missing
+															encryption, and compliance violations mapped to CIS AWS
+															Foundations Benchmark.</p>
+														<p>Features comprehensive security assessment capabilities with
+															automated remediation through Terraform and boto3 scripts.
+															Generates detailed findings reports with severity ratings,
+															risk analysis, and actionable fix recommendations.
+															Implements multi-service scanning with parallel execution
+															for efficient cloud security auditing at scale.</p>
 													</div>
 													<div class="detailbox">
 														<ul>
 															<li>
 																<div style="margin-bottom: 15px;">
 																	<a class="project-link github-link"
-																		href="https://github.com/mcui1997/network-vulnerability-analysis"
+																		href="https://github.com/mcui1997/aws-security-scanner"
 																		target="_blank"
 																		style="color: white; background-color: #2c3e50; padding: 8px 16px; text-decoration: none; border-radius: 4px; transition: all 0.3s ease; margin-bottom: 15px !important;">GITHUB</a>
-
 																</div>
 															</li>
 															<li>
 																<span class="first">Technologies</span>
-																<span>Python, Azure SDK, Azure Functions, REST
-																	APIs</span>
+																<span>Python, boto3, Terraform, AWS SDK</span>
 															</li>
 															<li>
 																<span class="first">Category</span>
-																<span><a href="#">Cloud Security Automation</a></span>
+																<span><a href="#">Cloud Security & DevSecOps</a></span>
 															</li>
 															<li>
 																<span class="first">Status</span>
